fix: add gitignore, add pageable in findAll of product